--- a/html/options.html
+++ b/html/options.html
@@ -12,7 +12,7 @@
         <link rel="stylesheet" href="/css/bootstrap.v5.3.min.css" />
         <link
             rel="stylesheet"
-            href="/bootstrap-icons-1.8.1/bootstrap-icons.css"
+            href="/bootstrap-icons-1.8.1/bootstrap-icons.min.css"
         />
         <link rel="stylesheet" href="/css/bootstrap-table.min.v1.22.4.css" />
     </head>
@@ -169,21 +169,33 @@
                     >
                 </div>
             </div>
-            <div class="mt-2 mb-2">
+            <div class="mt-2">
                 <h3>object stores</h3>
                 <table
                     id="objectStoresTable"
-                    class="table table-striped table-hover mx-0"
+                    class="table table-striped table-hover mx-0 mb-0"
                 >
                     <thead>
                         <tr>
-                            <th scope="col">name</th>
-                            <th scope="col" class="text-end">rows</th>
-                            <th scope="col" class="text-end">delete</th>
+                            <th class="d-flex justify-content-between p-2" scope="col">
+                              <div class="flex-fill">name</div>
+                              <div class="">rows</div>
+                              <div class="w-25 text-end">options</div>
+                            </th>
                         </tr>
                     </thead>
                     <tbody id="objectStores"></tbody>
                 </table>
+            </div>
+            <div class="mb-2">
+                <file-drop accept="application/json,application/gzip">
+                  <div class="input-group csvLoad" id="drop-area">
+                    <label class="input-group-text" for="fileInput">.json.gz</label>
+                    <input class="form-control" type="file" id="fileInput" name="fileInput" accept="application/json,application/gzip">
+                    <select id="idFields" class="form-select"></select>
+                    <button id="importButton" class="btn btn-outline-primary" type="button">import <i class="bi bi-database-up"></i></button>
+                  </div>
+                </file-drop>
             </div>
             <div class="mb-2">
                 <div class="form-check form-switch">
