--- a/html/map.html
+++ b/html/map.html
@@ -15,6 +15,29 @@
             href="/bootstrap-icons-1.8.1/bootstrap-icons.css"
         />
         <link rel="stylesheet" href="/css/bootstrap-table.min.v1.22.4.css" />
+        <style>
+            .multicolor-button {
+                background: linear-gradient(
+                    45deg,
+                    #4285f4 25%,
+                    #ea4335 25%,
+                    #ea4335 50%,
+                    #fbbc05 50%,
+                    #fbbc05 75%,
+                    #34a853 75%
+                );
+                color: white;
+                border: none;
+                padding: 10px 20px;
+                font-size: 16px;
+                cursor: pointer;
+                transition: transform 0.3s ease;
+            }
+
+            .btn:hover {
+                transform: scale(1.05);
+            }
+        </style>
     </head>
 
     <body style="background-color: #ebeff7; overflow: hidden">
@@ -124,7 +147,7 @@
                     <button
                         id="autoColorClusters"
                         type="button"
-                        class="btn btn-primary"
+                        class="btn multicolor-button"
                         data-bs-dismiss="offcanvas"
                     >
                         auto colorize data
@@ -232,8 +255,6 @@
         <script src="/libs/bootstrap-table.min.v1.22.4.js"></script>
         <script src="/libs/tableExport.min.v1.27.0.js"></script>
         <script src="/libs/bootstrap-table-export.min.v1.22.4.js"></script>
-
-        <script src="/libs/dbscan.js"></script>
 
         <script type="module" src="/js/map.js"></script>
     </body>
